adds fileviewer chart header to show filename, re #44

--- a/afs/templates/views/components/cards/file-renderers/afs-reader.htm
+++ b/afs/templates/views/components/cards/file-renderers/afs-reader.htm
@@ -1,6 +1,11 @@
 {% load i18n %}
 
 <!--ko if: params.context === 'render' -->
+    <!-- ko if: params.selected() -->
+    <div class="file-viewer chart-header">
+        <h3 data-bind="text: (params.selected().data['7c486328-d380-11e9-b88e-a4d18cec433a']()[0].name)"></h3>
+    </div>
+    <!-- /ko -->
 <div class="">
     <!--ko if: params.selected() -->
     <div class="preview file-viewer" style="position: relative">
