Update how IIIF drawing styling tools are styled

--- a/afs/media/css/project.css
+++ b/afs/media/css/project.css
@@ -128,3 +128,15 @@
     padding: 5px;
     font-size: 0.9em;
 }
+
+.style-tools-panel {
+    background: #fbfbfb;
+    border: 1px solid #ddd;
+    padding: 15px 15px 5px 5px;
+    margin-bottom: 5px;
+    border-radius: 2px;
+}
+
+.style-tools-color-visualizer {
+    border: 1px solid #000;
+}
