limits colorpicker to the *data* tab, re arches #5966

--- a/afs/templates/views/components/cards/file-renderers/afs-reader.htm
+++ b/afs/templates/views/components/cards/file-renderers/afs-reader.htm
@@ -117,7 +117,7 @@
     </div>
     <!--/ko-->
     <div>
-        <!-- ko if: seriesData().length >= 1 && selectedSeriesTile -->
+        <!-- ko if: seriesData().length >= 1 && selectedSeriesTile && fileViewer.activeTab() === 'other-tab' -->
         <div class="chart-style-panel">
             <h2>{% trans "Style" %}</h2>
             <div class="row widget-container">
