Prevents chart from getting too tall when window is resized, re #343

--- a/afs/templates/views/components/cards/file-renderers/afs-reader.htm
+++ b/afs/templates/views/components/cards/file-renderers/afs-reader.htm
@@ -10,7 +10,7 @@
     <!-- /ko -->
 <div class="">
     <!--ko if: params.selected() -->
-    <div class="preview file-viewer" style="position: relative">
+    <div class="preview file-viewer" style="position: relative;">
         <div class='loading-mask' data-bind="visible: loading()"></div>
         <!--ko if: chartData -->
         <div class="chart" data-bind='plotly: {
