comments added file filter input, removes ko conditional render of line items not yet added to seriesData, adds select2 query input and button to add to seriesData, re #43

--- a/afs/templates/views/components/cards/file-renderers/afs-reader.htm
+++ b/afs/templates/views/components/cards/file-renderers/afs-reader.htm
@@ -84,10 +84,22 @@
         <h4 class="workbench-card-sidepanel-header" data-bind="click: fileViewer.hideSidePanel, text: 'Manage Series Data'"></h4>
     </div>
 
-    <div class="file-workbench-filter">
+    <!-- <div class="file-workbench-filter">
         <h2 class="file-workbench-filter-header">{% trans "File Filter" %}</h2>
         <input type="text" class="form-control" style="width: 100%; height:initial" placeholder="{% trans 'e.g.: .txt' %}" data-bind="textInput: filter"></input>
         <span class="clear-node-search" data-bind="visible: filter().length > 0, click: function() { filter(''); }"><i class="fa fa-times-circle"></i></span>
+    </div> -->
+    <div class="mpm-resource-selection">
+        <div class="resource-dropdown">
+            <h3>Select a file</h3>
+            <input class="" style="display:inline-block;"
+            data-bind="select2Query: {
+                select2Config: getSelect2FilesConfig()
+            }">
+            <div style="padding-top: 10px">
+                <button style="margin-right: 3px;" class="btn btn-lg btn-workbench btn-primary" data-bind="click: function(){enqueueAddedFiles();}"><i class="fa fa-gears"></i> {% trans 'Add Selected Files' %}</button>
+            </div>
+        </div>
     </div>
 
     <div class="file-workbench-files">
@@ -96,14 +108,6 @@
                 && $parent.fileViewer.getUrl($data).renderer.id === $parent.fileViewer.displayContent().renderer.id 
                 && $parent.fileViewer.selected().tileid !== $data.tileid
                 && ($parent.filter().length === 0 || $parent.isFiltered($data))-->
-                    <!--ko if: $parent.seriesData().filter(function(t){return t.tileid === $data.tileid}).length === 0; -->
-                    <div class="file-workbench-file chart-series-selector">
-                        <div class="add-data-series">
-                            <i class="fa fa-plus" data-bind="click: function(){$parent.addData($data)}"></i>
-                        </div>
-                        <div data-bind="text: $parent.fileViewer.getUrl($data).name"></div>
-                    </div>
-                    <!--/ko-->
                     <!--ko if: $parent.seriesData().filter(function(t){return t.tileid === $data.tileid}).length === 1; -->
                     <div class="file-workbench-file chart-series-selector" data-bind="click: function(){$parent.toggleSelected($data)}, css: {'selected-photo': $parent.selectedSeriesTile() === $data}">
                         <div class="add-data-series">
@@ -117,8 +121,8 @@
     </div>
     <!--/ko-->
     <div>
-        <!-- ko if: seriesData().length >= 1 && selectedSeriesTile && fileViewer.activeTab() === 'other-tab' -->
-        <div class="chart-style-panel">
+        <!-- ko if: seriesData().length >= 1 && !!selectedSeriesTile() && fileViewer.activeTab() === 'other-tab' -->
+        <div class="">
             <h2>{% trans "Style" %}</h2>
             <div class="row widget-container">
 
