Removes unused element id

--- a/afs/templates/views/components/cards/file-renderers/afs-reader.htm
+++ b/afs/templates/views/components/cards/file-renderers/afs-reader.htm
@@ -131,8 +131,8 @@
                         <label class="col-xs-12 control-label widget-input-label"> {% trans "Color" %} </label>
                     </div>
 
-                    <div class="colorpicker-component input-group" id="cp1">
-                        <input id="cp1" placeholder="{% trans  'Data Series Line Color'  %}" class="form-control input-lg widget-input" data-bind="colorPicker: {color: colorHolder, format:'hex', container: '#cp1'}">
+                    <div class="colorpicker-component input-group">
+                        <input placeholder="{% trans  'Data Series Line Color'  %}" class="form-control input-lg widget-input" data-bind="colorPicker: {color: colorHolder, format:'hex'}">
                         <span class="input-group-addon" data-bind="style: {background: colorHolder}"></span>
                     </div>
                 </div>
