--- a/afs/media/css/project.css
+++ b/afs/media/css/project.css
@@ -3,3 +3,9 @@
     margin-left: 15px;	
     margin-top: 20px;	
 }	
+
+.file-workbench-filter.series-data {
+    position: relative;
+    margin-top: 15px;
+    margin-bottom: -10px;
+}
