Starts object search step re #112

--- a/afs/media/css/project.css
+++ b/afs/media/css/project.css
@@ -9,3 +9,16 @@
     margin-top: 15px;
     margin-bottom: -10px;
 }
+
+
+.sampling-activity {   
+    display: flex;
+    flex-direction: column; 
+    margin-left: -25px;
+}
+
+.sampling-activity-search-panel {
+    height: 55px;
+    background-color: #f3f3f3;
+    border-bottom: #ddd solid 1px;
+}
