makes search panel position fixed, re #112

--- a/afs/media/css/project.css
+++ b/afs/media/css/project.css
@@ -21,4 +21,11 @@
     height: 55px;
     background-color: #f3f3f3;
     border-bottom: #ddd solid 1px;
+    position: fixed;
+    width: 100%;
+}
+
+.physical-object-search-results {
+    margin-top: 60px;
+    padding: 10px;
 }
