--- a/afs/templates/views/components/functions/file-to-iiif.htm
+++ b/afs/templates/views/components/functions/file-to-iiif.htm
@@ -9,7 +9,7 @@
 
       <div class="col-xs-12">
           <select data-placeholder="{% trans "Choose a card." %}"
-          data-bind="chosen: {width: '100%', disable_search_threshold: 15}, value: selected_nodegroup, options: cards, optionsText: 'name', optionsValue: 'nodegroup_id', valueAllowUnset: true"></select>
+          data-bind="chosen: {width: '100%', disable_search_threshold: 15}, value: selectedNodegroup, options: cards, optionsText: 'name', optionsValue: 'nodegroup_id', valueAllowUnset: true"></select>
       </div>
     </div>
   </div>
