add project-specific styling for btn in multi-tile workflow step, re #6148

--- a/afs/media/css/project.css
+++ b/afs/media/css/project.css
@@ -29,3 +29,10 @@
     margin-top: 60px;
     padding: 10px;
 }
+
+.wf-multi-tile-btn-complete {
+    position: absolute;
+    bottom: 305px;
+    right: 100px;
+    font-weight: 800;
+}
