Adds new collection workflow re #129

--- a/afs/media/css/project.css
+++ b/afs/media/css/project.css
@@ -17,6 +17,12 @@
     margin-left: -25px;
 }
 
+
+.sampling-activity .selected-instance {   
+    background-color: #fff;
+    font-weight: 700;
+}
+
 .sampling-activity-search-panel {
     height: 55px;
     background-color: #f3f3f3;
