--- a/afs/media/css/project.css
+++ b/afs/media/css/project.css
@@ -15,6 +15,7 @@
     display: flex;
     flex-direction: column; 
     margin-left: -25px;
+    height: 100%;
 }
 
 
@@ -34,4 +35,11 @@
 .physical-object-search-results {
     margin-top: 60px;
     padding: 10px;
+}
+
+.wf-multi-tile-btn-complete {
+    position: absolute;
+    bottom: 305px;
+    right: 100px;
+    font-weight: 800;
 }
