--- a/afs/media/css/project.css
+++ b/afs/media/css/project.css
@@ -33,8 +33,8 @@
 }
 
 .physical-object-search-results {
-    margin-top: 60px;
-    padding: 10px;
+    margin-top: 57px;
+    padding: 0;
 }
 
 .wf-multi-tile-btn-complete {
